--- a/bootstrap_subtheme/less/content.less
+++ b/bootstrap_subtheme/less/content.less
@@ -1,1 +1,165 @@
 // Insert your styling here.
+@import 'neb_variables.less';
+//colours
+
+@or : #e99e23;
+@argent : #a4abac;
+@bronze : #b87e54;
+@jaune : #ffcc31;
+@noir : #000;
+@blanc : #fff;
+
+//definition des classes abstraites
+.border-radius(@radius : 10px){
+	-moz-border-radius: @radius;
+	-webkit-border-radius: @radius;
+	border-radius: @radius;
+}
+
+.panel(@color){
+	border-color: @color;
+
+	.panel-heading{
+		background-color: @color;
+		border-color: @color;
+	}
+
+	.panel-footer{
+		background-color: lighten(@color, 15%);
+	}
+}
+//fin----------------------
+
+
+
+//Page d'accueil
+
+//carousel
+.jumbotron{
+	padding: 0px !important;
+	margin : 0px;
+}
+
+.carousel-inner > .item > img{
+	margin: auto;
+	padding-bottom: 70px;
+}
+
+
+
+
+
+//view masonry
+
+.view-frontpage{
+	margin-top: 5px;
+	text-align: center;
+
+	.masonry-item{
+		width: 200px;
+		border: 1px solid black;
+		background-color: #ffcc31;
+		margin-bottom: 10px;
+		padding: 5px;
+		text-align: justify;
+
+		.node-bd{
+			cursor: pointer;
+		}
+
+		h2{
+			margin-top: 0px;
+		}
+
+		img{
+			margin: auto;
+			margin-bottom: 5px;
+		}
+
+		ul.links, span.readmore{
+			margin-top: 5px;
+			text-align: right;
+		}
+	}
+
+	a{
+		color: @noir;
+	}
+}
+
+/*vus selection du mois*/
+
+#block-views-selection-du-mois-block-1{
+	background: @blanc;
+	border: 3px solid @jaune;
+
+	.view-selection-du-mois{
+
+		div.item-list{
+
+			ul{
+				list-style: none;
+				display: table;
+				width: 100%;
+				margin: 10px 0px 10px 0px;
+
+
+				li.views-row{
+					display: table-cell;
+					text-align: center;
+				}
+			}
+		}
+	}
+}
+
+
+//vue club
+
+div.view-club-with-modal{
+	div.field-content{
+		.panel-default{
+			.panel(@jaune);
+
+			.panel-footer{
+				text-align: right;
+			}
+		}
+
+		.Or{
+			.panel(@or);
+		}
+
+		.Argent{
+			.panel(@argent);
+		}
+
+		.Bronze{
+			.panel(@bronze);
+		}
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
