--- a/bootstrap_subtheme/css/style.css
+++ b/bootstrap_subtheme/css/style.css
@@ -29,6 +29,9 @@
   background-color: #ffcc31;
   border-color: #ffcc31;
 }
+body {
+  background: #000000;
+}
 .jumbotron {
   padding: 0px !important;
   margin: 0px;
@@ -134,7 +137,10 @@ div.view-club-with-modal div.field-content .Bronze .panel-heading {
 div.view-club-with-modal div.field-content .Bronze .panel-footer {
   background-color: #cea78a;
 }
-#edit-field-date-selection-value-wrapper label {
+div.views-exposed-form label {
   color: #ffffff;
 }
-
+div.views-exposed-form select.form-control:focus {
+  border-color: #ffcc31;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px #ffcc31;
+}
