--- a/bootstrap_subtheme/less/content.css
+++ b/bootstrap_subtheme/less/content.css
@@ -7,6 +7,10 @@
 body {
   background: #000000;
 }
+a,
+a:hover {
+  color: #000000;
+}
 .jumbotron {
   padding: 0px !important;
   margin: 0px;
@@ -118,4 +122,30 @@ div.views-exposed-form label {
 div.views-exposed-form select.form-control:focus {
   border-color: #ffcc31;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px #ffcc31;
+}
+div.node-article {
+  background: #ffcc31;
+  padding-bottom: 5px;
+}
+div.node-article div.field-name-title p {
+  margin: 10px 0px 5px 20px;
+}
+div.node-article div.field-name-field-image a img {
+  margin: 10px auto 0px auto;
+}
+div.node-article .field-name-body p {
+  text-align: justify;
+  margin-right: 10px;
+}
+div.node-article .field-name-node-link .field-item {
+  text-align: right;
+  margin-right: 10px;
+}
+#block-system-navigation {
+  background-color: #ffcc31;
+  margin: 10px 0;
+}
+#block-system-navigation ul li a:hover {
+  background-color: #ffcc31;
+  text-decoration: underline;
 }
