fin de journée 2 - presentation copil

--- a/bootstrap_subtheme/less/header.less
+++ b/bootstrap_subtheme/less/header.less
@@ -17,9 +17,10 @@
 	margin-bottom: 0px;
 	border: none;
  	color: @noir;
-	background-color: @noir;
+	background-color: transparent;
 	background-image:  url("dechirure.png");
 	background-size: contain;
+	z-index: 10;
 
 	div.container{
 		div.navbar-header{
