--- a/bootstrap_subtheme/less/content.css
+++ b/bootstrap_subtheme/less/content.css
@@ -11,17 +11,38 @@ a,
 a:hover {
   color: #000000;
 }
+ul.tabs--primary li > a {
+  color: #555;
+  cursor: default;
+  background-color: #FFF;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #DDD #DDD transparent;
+}
+#block-views-diaporama-front-page-block {
+  position: relative;
+  top: -10px;
+}
 .jumbotron {
   padding: 0px !important;
   margin: 0px;
+  background-color: transparent;
 }
 .carousel-inner > .item > img {
   margin: auto;
   padding-bottom: 70px;
 }
 .view-frontpage {
-  margin-top: 5px;
-  text-align: center;
+  padding-top: 15px;
+  background-image: url("dechirure-noir.png");
+  background-size: contain;
+  background-repeat: repeat-x;
+  position: relative;
+  top: -20px;
+  background-position: 0px -5px;
+}
+.view-frontpage .view-content {
+  margin: auto;
 }
 .view-frontpage .masonry-item {
   width: 200px;
@@ -148,4 +169,46 @@ div.node-article .field-name-node-link .field-item {
 #block-system-navigation ul li a:hover {
   background-color: #ffcc31;
   text-decoration: underline;
+}
+div.view-a2bulles {
+  border: 4px solid #ffcc31;
+  background-color: #ffffff;
+  padding: 5px;
+}
+div.view-a2bulles div.item-list ul {
+  list-style: none;
+}
+div.view-a2bulles div.item-list ul li.views-row {
+  display: inline-block;
+  width: 20%;
+}
+div.view-a2bulles div.item-list ul li.views-row-first {
+  width: 33%;
+}
+div.view-a2bulles strong.festival-edition {
+  letter-spacing: -1px;
+}
+.page-header {
+  color: #ffcc31;
+}
+div.block-festival {
+  border: 3px solid #ffcc31;
+  background: #ffffff;
+  margin-bottom: 10px;
+}
+div.node-festival div.panel-default {
+  margin: 10px !important;
+}
+#block-views-articles-festival-block-1 {
+  border: 3px solid #ffcc31;
+  background: #ffffff;
+  padding-left: 5px;
+}
+#block-views-articles-festival-block-1 .block-title {
+  margin-top: 10px;
+}
+#block-views-articles-festival-block-1 div.node-teaser {
+  margin-bottom: 5px;
+  border: 1px solid #000000;
+  padding: 5px;
 }
