--- a/bootstrap_subtheme/less/content.less
+++ b/bootstrap_subtheme/less/content.less
@@ -46,13 +46,30 @@ a, a:hover{
 	color: @noir;
 }
 
+ul.tabs--primary{
+	li>a{
+		color: #555;
+		cursor: default;
+		background-color: #FFF;
+		border-width: 1px;
+		border-style: solid;
+		border-color: #DDD #DDD transparent;
+	}
+}
+
 
 //Page d'accueil
 
 //carousel
+#block-views-diaporama-front-page-block{
+	position: relative;
+	top: -10px;
+}
+
 .jumbotron{
 	padding: 0px !important;
 	margin : 0px;
+	background-color: transparent;
 }
 
 .carousel-inner > .item > img{
@@ -60,6 +77,7 @@ a, a:hover{
 	padding-bottom: 70px;
 }
 
+//content
 
 
 
@@ -67,13 +85,23 @@ a, a:hover{
 //view masonry
 
 .view-frontpage{
-	margin-top: 5px;
-	text-align: center;
+	padding-top: 15px;
+	//text-align: center;
+	background-image: url("dechirure-noir.png");
+	background-size: contain;
+	background-repeat: repeat-x;
+	position: relative;
+	top: -20px;
+	background-position: 0px -5px;
+
+	.view-content{
+		margin: auto;
+	}
 
 	.masonry-item{
 		width: 200px;
 		border: 1px solid black;
-		background-color: #ffcc31;
+		background-color: @jaune;
 		margin-bottom: 10px;
 		padding: 5px;
 		text-align: justify;
@@ -228,8 +256,67 @@ div.node-article{
 }
 
 
+//vue a2 bulles
 
+div.view-a2bulles{
+	border: 4px solid @jaune;
+	background-color: @blanc;
+	padding: 5px;
 
+	div.item-list{
+		ul{
+			list-style: none;
+
+			li.views-row{
+				display: inline-block;
+				width: 20%;
+			}
+
+			li.views-row-first{
+				width: 33%;
+			}
+		}
+	}
+
+	strong.festival-edition{
+		letter-spacing: -1px;
+	}
+
+}
+
+//page festival à 2 bulles
+.page-header{
+	color: @jaune;
+}
+
+div.block-festival{
+	border: 3px solid @jaune;
+	background: @blanc;
+	margin-bottom: 10px;
+
+}
+
+div.node-festival{
+	div.panel-default{
+		margin: 10px !important;
+	}
+}
+
+#block-views-articles-festival-block-1{
+	border: 3px solid @jaune;
+	background: @blanc;
+	padding-left: 5px;
+
+	.block-title{
+		margin-top: 10px;
+	}
+
+	div.node-teaser{
+		margin-bottom: 5px;
+		border: 1px solid @noir;
+		padding: 5px;
+	}
+}
 
 
 
