--- a/bootstrap_subtheme/less/header.css
+++ b/bootstrap_subtheme/less/header.css
@@ -4,9 +4,10 @@
   margin-bottom: 0px;
   border: none;
   color: #000000;
-  background-color: #000000;
+  background-color: transparent;
   background-image: url("dechirure.png");
   background-size: contain;
+  z-index: 10;
 }
 #navbar div.container div.navbar-collapse nav ul.menu.navbar-nav li.leaf a {
   color: #000000;
