--- a/bootstrap_subtheme/less/header.less
+++ b/bootstrap_subtheme/less/header.less
@@ -5,7 +5,7 @@
 @or : #e99e23;
 @argent : #a4abac;
 @bronze : #b87e54;
-@jaune : #ffcc31;
+@jaune : #ffcd1e;
 @noir : #000;
 @blanc : #fff;
 
@@ -18,8 +18,10 @@
 	border: none;
  	color: @noir;
 	background-color: transparent;
-	background-image:  url("dechirure.png");
+	background-image:  url("dechirure.png"), linear-gradient(to top, transparent, #FFCC31 20%);
 	background-size: contain;
+	background-repeat: repeat-x;
+	background-position: bottom;
 	z-index: 10;
 
 	div.container{
