--- a/bootstrap_subtheme/less/header.css
+++ b/bootstrap_subtheme/less/header.css
@@ -4,8 +4,8 @@
   margin-bottom: 0px;
   border: none;
   color: #000000;
-  background-color: transparent;
-  background-image: url("dechirure.png"), linear-gradient(to top, transparent, #ffcc31 20%);
+  background-color: #ffcd1e;
+  background-image: url("dechirure-noire_jaune.png");
   background-size: contain;
   background-repeat: repeat-x;
   background-position: bottom;
