--- a/bootstrap_subtheme/less/header.less
+++ b/bootstrap_subtheme/less/header.less
@@ -17,8 +17,8 @@
 	margin-bottom: 0px;
 	border: none;
  	color: @noir;
-	background-color: transparent;
-	background-image:  url("dechirure.png"), linear-gradient(to top, transparent, #FFCC31 20%);
+	background-color: @jaune;
+	background-image:  url("dechirure-noire_jaune.png");
 	background-size: contain;
 	background-repeat: repeat-x;
 	background-position: bottom;
