--- a/bootstrap_subtheme/less/content.less
+++ b/bootstrap_subtheme/less/content.less
@@ -171,6 +171,7 @@ ul.tabs--primary{
 			letter-spacing: -1px;
 			text-align: left;
 			text-transform: capitalize;
+			margin-top: 0px;
 		}
 
 		div.date-selection{
